[package]
name = "agnocast_heaphook"
version = "2.3.1"
edition = "2021"
license = "Apache-2.0"
authors = [
    "Takahiro Ishikawa-Aso <sykwer@gmail.com>",
    "Ryuta Kambe <ryuta.kambe@tier4.jp>",
    "Atsushi Yano <atsushi.yano.2@tier4.jp>",
    "Koichi Imai <koichi.imai.2@tier4.jp>"
]
description = "A heap runtime replacement for Agnocast"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
rlsf = "0.2"
