<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agnocast_cie_thread_configurator</name>
  <version>2.3.0</version>
  <description>A dedicated node that configures the scheduling attributes of each thread in callback_isolated_executor.</description>

  <maintainer email="sykwer@gmail.com">Takahiro Ishikawa-Aso</maintainer>
  <maintainer email="atsushi.yano.2@tier4.jp">Atsushi Yano</maintainer>

  <license>Apache License 2.0</license>

  <!-- Original authors -->
  <author email="sykwer@gmail.com">Takahiro Ishikawa-Aso</author>
  <author email="atsushi.yano.2@tier4.jp">Atsushi Yano</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>

  <depend>agnocast_cie_config_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
