<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agnocast_components</name>
  <version>2.3.3</version>
  <description>
    CMake tools for registering ROS 2 component nodes with Agnocast executor support.
    Provides agnocast_components_register_node macro similar to rclcpp_components_register_node.
  </description>
  <maintainer email="sykwer@gmail.com">Takahiro Ishikawa-Aso</maintainer>
  <maintainer email="koichi.imai.2@tier4.jp">Koichi Imai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>class_loader</depend>
  <depend>agnocastlib</depend>
  <depend>agnocast_cie_thread_configurator</depend>
  <depend>agnocast_cie_config_msgs</depend>

  <build_depend>libgoogle-glog-dev</build_depend>
  <build_export_depend>libgoogle-glog-dev</build_export_depend>
  <exec_depend>libgoogle-glog-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
