<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agnocast_sample_application</name>
  <version>2.3.3</version>
  <description>
    A sample application for Agnocast.
  </description>
  <maintainer email="sykwer@gmail.com">Takahiro Ishikawa-Aso</maintainer>
  <maintainer email="ryuta.kambe@tier4.jp">Ryuta Kambe</maintainer>
  <maintainer email="atsushi.yano.2@tier4.jp">Atsushi Yano</maintainer>
  <maintainer email="koichi.imai.2@tier4.jp">Koichi Imai</maintainer>
  <maintainer email="kawaguchitnon@icloud.com">Tetsuhiro Kawaguchi</maintainer>
  <license>Apache License 2.0</license>

  <!-- Original authors -->
  <author email="sykwer@gmail.com">Takahiro Ishikawa-Aso</author>
  <author email="ryuta.kambe@tier4.jp">Ryuta Kambe</author>
  <author email="atsushi.yano.2@tier4.jp">Atsushi Yano</author>
  <author email="koichi.imai.2@tier4.jp">Koichi Imai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>agnocast_components</depend>
  <depend>agnocast_sample_interfaces</depend>
  <depend>agnocastlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
